--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,7 @@ scipy==1.3.0
 gunicorn==19.9.0
 dash_cytoscape==0.2.0
 dash_bootstrap_components==0.10.7
-tzlocal
-matplotlib
+rpy2==3.3.6
+matplotlib==3.3.3
+tzlocal==2.1
+
