--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 dash==1.17.0
 numpy==1.16.4
 pandas==0.24.2
-gunicorn==19.9.0
+git gunicorn==19.9.0
 dash_cytoscape==0.2.0
 dash_bootstrap_components==0.10.7
 rpy2==3.3.6
