--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 dash==1.17.0
-numpy==1.16.4
-pandas==0.24.2
-gunicorn==19.9.0
+numpy==1.19.4
+pandas==1.1.4
+gunicorn==20.0.4
 dash_cytoscape==0.2.0
 dash_bootstrap_components==0.10.7
 tzlocal==2.1
 matplotlib==3.3.3
-rpy2==3.3.6
+# rpy2==3.3.6
 
