--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ pandas==1.1.4
 gunicorn==20.0.4
 dash_cytoscape==0.2.0
 dash_bootstrap_components==0.10.7
+dash-core-components==0.5.3
 tzlocal==2.1
 matplotlib==3.3.3
 # rpy2==3.3.6
