--- a/requirements.txt
+++ b/requirements.txt
@@ -47,7 +47,7 @@ retrying==1.3.3
 rpy2==2.9.4
 scikit-learn==0.23.2
 scipy==1.5.2
-setuptools==50.3.1.post20201107
+setuptools==59.2.0
 six==1.15.0
 threadpoolctl==2.1.0
 toml==0.10.2
