--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ dash-table==5.0.0
 Flask==2.0.2
 Flask-Compress==1.5.0
 future==0.18.2
+gunicorn==20.1.0
 itsdangerous==2.0.1
 Jinja2==3.0.2
 joblib==1.1.0
