--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,8 @@
 venv
 *.pyc
-.Rhistory
-.DS_Store
-.env
-.idea/
 *.pickle
-db/.temp/
 db/forest_data/old_data
 db/SennXXX.csv
-settings.json
-download_prova.py
-app_test*
-dsaugh.ipynb
-app_test2.py
-app_test.py
-
+*.ipynb
+.*
+!.gitignore
