--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ click==8.0.3
 dash==2.0.0
 dash-bootstrap-components==0.10.7
 dash-core-components==2.0.0
+dash-extensions==0.0.69
 dash-cytoscape==0.3.0
 dash-daq==0.5.0
 dash-html-components==2.0.0
