--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,8 @@ db/GRIS_depression_long copy.csv
 db/GRIS_depression_long.csv
 db/GRISdataRESPmergeALL.csv
 db/psoriasis_wide_with_class.csv
-__backup/
-_backup/
+__backup/*
+_backup/*
 *.ipynb
 .*
 !.gitignore
