--- a/requirements.txt
+++ b/requirements.txt
@@ -21,8 +21,8 @@ itsdangerous==2.0.1
 Jinja2==3.0.2
 joblib==1.1.0
 MarkupSafe==2.0.1
-numexpr==2.7.3
-numpy==1.21.2
+numexpr>=2.7.3
+numpy>=1.21.2
 pandas==1.3.4
 plotly==5.1.0
 pycparser==2.21
@@ -32,7 +32,7 @@ pytz-deprecation-shim==0.1.0.post0
 PyYAML==6.0
 rpy2==3.4.5
 scikit-learn==1.0.1
-scipy==1.7.1
+scipy>=1.7.1
 setuptools==57.5.0
 six==1.15.0
 tenacity==8.0.1
