--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ brotlipy==0.7.0
 certifi==2021.10.8
 cffi==1.14.6
 click==8.0.3
-dash==2.0.0
+dash>=2.9.3
 dash-bootstrap-components==0.10.7
 dash-core-components==2.0.0
 dash-extensions==0.0.69
